# playtime-tracker

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
playtime_tracker/: __init__.py  __main__.py  config.py  data_manager.py  model.py  tracker.py  ui.py
src/: config.py  data_manager.py  model.py  tracker.py  ui.py
tests/: test_data_manager.py  test_model.py  test_tracker_engine.py
